# open_standardizer

./: CMakeLists.txt  Dockerfile.cpu  Dockerfile.gpu  README.md  __init__.py  batch_engine.py  canon-stereo-keeplargest.xml  chemaxon_equiv.xml  cluster_env.py  config.yaml  enhanced_smiles.py  fallback_engine.py  gpu_cpu_policy_manager.py  gpu_fallback_manager.cpp  gpu_fallback_policy.yaml  gpu_ops.py  openstandardizer_schema.xml  pyproject.toml  standardize.py  standardizer_loader.py  stereo_export.py  stereo_validation.py
configs/xml/: chemaxon-canon-nostereo-keeplargest-keepisotopes.xml  chemaxon-canon-nostereo-keeplargest.xml  chemaxon-canon-stereo-keeplargest-keepisotopes.xml  chemaxon-canon-stereo-keeplargest.xml  chemaxon-canon-stereo-nosalt-keepisotopes.xml  chemaxon-canon-stereo-nosalt.xml  chemaxon-clearisotopes.xml  chemaxon-legacy-canonical-nostereo-keeplargest-clearisotopes.xml  chemaxon-legacy-canonical-nostereo-keeplargest.xml  chemaxon-legacy-canonical-stereo-keeplargest-clearisotopes.xml  chemaxon-legacy-canonical-stereo-keeplargest.xml  chemaxon-legacy-canonical-stereo-nosalt.xml  chemaxon-validate.xml  chemaxon_equiv.xml  rdkit_equiv.xml
configs/yaml/: config.yaml
gpu/: charge_norm_bindings.cpp  cuda_helpers.hpp  kernels.cu  mesomerizer_full.cu  multistream.py  standardize_bindings.cpp  standardize_gpu.py
include/: charge_norm.hpp  fallback_engine.hpp  standardizer.hpp
open_standardizer/: __init__.py  cpu_ops.py  cx_bridge.py  enhanced_smiles.py  gpu_cpu_policy_manager.py  gpu_cpu_profiler.py  gpu_ops.py  molblock.py  openstandardizer.py  pipeline_constructor.py  pipeline_rules.py  standardization_report.py  standardize.py  stereo_export.py  stereo_validation.py  xml_loader.py
open_standardizer/gpu/: __init__.py  _gpu_driver.py  multistream.py
open_standardizer/testing/: standardize_cli.py  stereo_diff_cli.py
python/: bindings.cpp  bindings_fallback.cpp
rdkit_fallback_engine/: __init__.py  manager.py
rdkit_standardizer/: standardize.py
rdkit_standardizer/xml_actions/: canon-stereo-keeplargest.xml
src/: gpu_exceptions.py
src/cpp/: fallback_manager.cpp
src/cpu/: fallback_manager.hpp  standardize_cpu.cpp  standardize_cpu_fallback.cpp  standardize_rdkit.py
src/gpu/: aromaticity.cu  bond_infer.cu  charge_normalize.cu  core_ops.cu  core_ops_batch.cpp  core_ops_batch.hpp  core_ops_flags.hpp  gpu_kernels.hpp  gpu_structs.hpp  init.py  kernels.cu  mesomerizer.cu  standardize_bindings.cpp  standardize_cuda.cu  standardize_gpu.cpp  stereo.cu  tautomerize.cu
src/main/java/com/: ChemAxonStandardizeCli.java
tests/: stereo_diff_cli.py
